--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "history": "^4.7.2",
     "marked": "^0.3.12",
     "prop-types": "^15.6.0",
+    "quill": "^1.3.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-quill": "^1.2.6",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
