--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-persist": "^5.9.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "webpack-dev-middleware": "^2.0.5",
