--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Created by https://www.gitignore.io/api/osx,node,visualstudiocode
 
+# deploy script
+deploy.sh
+
+# static builds
+dist/
+
 ### Node ###
 # Logs
 logs
@@ -59,7 +65,6 @@ typings/
 
 # dotenv environment variables file
 .env
-
 
 ### OSX ###
 *.DS_Store
