--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server"
+    "start": "NODE_ENV=production node ./node_modules/webpack-dev-server/bin/webpack-dev-server",
+    "dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server",
+    "deploy": "./deploy.sh"
   },
   "author": "Jacob Knaack",
   "license": "ISC",
@@ -39,6 +41,7 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.0",
