--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node ./node_modules/webpack-dev-server/bin/webpack-dev-server",
     "dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server",
-    "deploy": "NODE_ENV=production ./deploy.sh"
+    "predeploy": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Jacob Knaack",
   "license": "ISC",
