--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-persist": "^5.9.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "webpack-dev-middleware": "^2.0.5",
     "webpack-dev-server": "^2.11.1"
   }
