--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^1.2.0",
+    "dateformat": "^3.0.3",
     "history": "^4.7.2",
     "marked": "^0.3.12",
     "prop-types": "^15.6.0",
@@ -44,7 +45,7 @@
     "file-loader": "^1.1.6",
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.3",
     "postcss-loader": "^2.1.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-persist": "^5.9.1",
