--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dateformat": "^3.0.3",
     "history": "^4.7.2",
     "marked": "^0.3.12",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.2",
     "quill": "^1.3.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -28,8 +28,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-api-middleware": "^2.2.0",
-    "redux-thunk": "^2.2.0",
-    "webpack": "^3.11.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
@@ -40,6 +39,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
@@ -52,6 +53,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "sw-precache-webpack-plugin": "^0.11.5",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.5",
     "webpack-dev-server": "^2.11.1"
   }
