--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node ./node_modules/webpack-dev-server/bin/webpack-dev-server",
     "dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server",
+    "build": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js",
     "predeploy": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js",
     "deploy": "gh-pages -d dist"
   },
